--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -9,6 +9,8 @@
 *  -Табы
 *  -Новости
 *  -Комментарии
+*  -Line
+*  -Array
 * Footer
 ******************************/
 @import "fragment/_variables";
@@ -330,7 +332,7 @@ ol{
     }
 }
 section, .section {
-    padding: 100px 0;
+    padding: 50px 0;
     &.pb-50{
         padding-bottom: 50px;
     }
@@ -372,20 +374,20 @@ section, .section {
 **********************************/
 
 .header {
+    margin-bottom: 100px;
     .page__start {
         &-logo-img {
             max-height: 65px;
         }
     }
     .page__center {
-        .navbar {
-            &-nav {
-                .nav-link {
-                    color: $rg-text-color;
-                }
-                // .nav-item:not(:last-child) {
-                //     margin-right: 72px;
-                // }
+        .collapse {
+            .nav-link {
+                color: $rg-text-color;
+                text-align: center;
+            }
+            .nav-item:not(:last-child) {
+                margin-right: 72px;
             }
         }
     }
@@ -395,8 +397,6 @@ section, .section {
         }
     }
 }
-
-
 
 
 // #top-menu {
@@ -1003,7 +1003,6 @@ form.search-form{
                 text-align: right;
             }
         }
-
     }
 
 
@@ -1107,8 +1106,49 @@ form.search-form{
             }
         }
     }
-
 }
+
+/**********************************
+* Line
+**********************************/
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: #FFFF00;
+    margin-top: 100px;
+}
+
+/**********************************
+* Array
+**********************************/
+
+.array {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    background-color: #FFFF00;
+    border-radius: 50%;
+    margin-left: auto;
+    &::after {
+        content: "";
+        position: absolute;
+        background: url("../img/svg/array.svg");
+        width: 32px;
+        height: 24px;
+        top: 15px;
+        right: 19px;
+    }
+    &::before {
+        content: "";
+        position: absolute;
+        width: 15px;
+        height: 1px;
+        background-color: #fff;
+        bottom: 23px;
+        left: -15px;
+    }
+}
+
 /**********************************
 * Footer
 **********************************/
