--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ body {
     font-size: 32px;
 }
 
-.photos-array {
+.array {
     position: relative;
     width: 50px;
     height: 50px;
@@ -286,7 +286,7 @@ body {
     margin-left: auto;
 }
 
-.photos-array::after {
+.array::after {
     content: "";
     position: absolute;
     background: url("../img/svg/array.svg");
@@ -296,7 +296,7 @@ body {
     right: 19px;
 }
 
-.photos-array::before {
+.array::before {
     content: "";
     position: absolute;
     width: 15px;
