--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -1119,6 +1119,12 @@ form.search-form{
     margin-top: 100px;
 }
 
+.line-two {
+    width: 282px;
+    height: 0.5px;
+    background-color: #6D6D6D;
+}
+
 /**********************************
 * Array
 **********************************/
