--- a/assets/css/mobile.scss
+++ b/assets/css/mobile.scss
@@ -1,6 +1,5 @@
 @import 'fragment/_variables';
 @media all and (max-width: 1399.98px) {
-	
 	.header {
 		.page__center {
 			.collapse {
@@ -42,6 +41,23 @@
 			.info {
 				.text {
 					margin-bottom: 40px;
+				}
+			}
+		}
+	}
+
+	.page-portfolio {
+		&.product {
+			.slider {
+				.info {
+					.figures {
+						p {
+							font-size: 1.9rem;
+							&:last-child {
+								font-size: 1rem;
+							}
+						}
+					}
 				}
 			}
 		}
@@ -172,6 +188,11 @@
 	}
 
 	.page-about {
+		&.preview {
+			.preview__title {
+				font: 6rem $rg-font-style-bold;
+			}
+		}
 		&.departments {
 			margin-bottom: 20px;
 			.container {
@@ -179,6 +200,27 @@
 				position: static;
 				top: 0;
 				left: 0;
+			}
+		}
+	}
+
+	.page-contacts {
+		&.addres {
+			.wrapper {
+				top: 25%;
+				transform: translate(-50%, -40%);
+				.info {
+					max-width: none;
+					width: 100%;
+				}
+			}
+		}
+	}
+
+	.page-error {
+		&.warning {
+			img {
+				margin: 0 auto;
 			}
 		}
 	}
@@ -279,9 +321,25 @@
 	}
 
 	.page-about {
+		&.preview {
+			.preview__title {
+				font: 4.4rem $rg-font-style-bold;
+			}
+		}
 		&.description {
 			h2 {
 				font-size: 1.9rem;
+			}
+		}
+	}
+
+	.footer-page {
+		&.footer {
+			.links {
+				.list {
+					margin-left: 7px;
+					margin-right: 7px;
+				}
 			}
 		}
 	}
@@ -384,7 +442,21 @@
 	.page-about {
 		&.preview {
 			.preview__title {
-				font-size: 5.1rem;
+				font-size: 2.4rem;
+			}
+		}
+	}
+
+	.footer-page {
+		&.footer {
+			.info {
+				max-width: 196px;
+			}
+			.links {
+				.list {
+					max-width: 234px;
+					width: 100%;
+				}
 			}
 		}
 	}
